--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,120 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
 
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 2% 0%;
+}
+
+nav a:link, nav a:visited, nav a:hover, nav a:active {
+    color: gray;
+    text-decoration: none;
+}
+
+footer {
+    text-align: center;
+    margin: 30px 0;
+}
+
+/* Page Width */
+.page {
+    width: 60%;
+    margin: 0 auto;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    margin: 2% 0%;
+}
+
+/* 100% length image */
+.middle-img {
+    width: 100%;
+    height: 175px;
+}
+
+.box1 {
+    width: 48%;
+    margin: 0 auto;
+}
+
+.box1 h1 {
+    text-align: center;
+    font-size: 48pt;
+}
+
+/* "Get Started" button */
+.box1 button {
+    margin-left: 34%;
+    padding: 10px 25px;
+    border: 1px solid black;
+    font-size: 12pt;
+}
+
+.box2 {
+    width: 31%;
+    margin: 1%;
+}
