Fixed margins and paddings

--- a/css/index.css
+++ b/css/index.css
@@ -78,7 +78,7 @@ footer {
 
 /* Page Width */
 .page {
-    width: 75%;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -129,6 +129,10 @@ footer {
     margin: 1%;
 }
 
+.contact {
+    padding-top: 20px;
+}
+
 /* Media Breakpoint 800px */
 @media (max-width: 800px) {
     nav {
@@ -160,13 +164,14 @@ footer {
     }
 }
 
+/* Media Breakpoint 500px */
 @media (max-width: 500px) {
-    nav a:nth-child(1), nav a:nth-child(2), nav a:nth-child(3), nav a:nth-child(4), nav a:nth-child(5), nav a:nth-child(6) {
-        width: 100%;
-        flex-direction: wrap-reverse;
-
+    nav {
+        
     }
+
     nav a {
+        width: 100%;
         padding: 15px 0;
         border-bottom: thin solid gray;
         text-align: center;
