--- a/css/index.css
+++ b/css/index.css
@@ -46,6 +46,7 @@ table {
 /* Set every element's box-sizing to border-box */
 * {
     box-sizing: border-box;
+    color: #1C1A1A;
 }
 
 html, body {
@@ -59,15 +60,18 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 
+body {
+    background-color:#F0F0F0;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 2% 0%;
+    margin: 2% 0%; 
 }
 
-nav a:link, nav a:visited, nav a:hover, nav a:active {
-    color: gray;
+nav a:link, nav a:visited, nav a:active {
     text-decoration: none;
 }
 
@@ -78,7 +82,7 @@ footer {
 
 /* Page Width */
 .page {
-    width: 90%;
+    width: 75%;
     margin: 0 auto;
 }
 
@@ -92,14 +96,15 @@ footer {
 }
 
 /* 100% length image */
-.middle-img {
+.middle-img, .services-header-img {
     width: 100%;
     height: 175px;
 }
 
-.box1, .box2 {
+.box1, .box2, .item, .box4 {
     width: 48%;
     margin: 0 auto;
+    vertical-align: top;
 } 
 
 .box1 {
@@ -113,11 +118,17 @@ footer {
     font-size: 48pt;
 }
 
-/* "Get Started" button */
-.box1 button {
+.box1 button, .item button {
     padding: 10px 25px;
-    border: 1px solid black;
+    border: 1px solid #1C1A1A;
+    border-radius: 3px;
     font-size: 12pt;
+    background-color: transparent;
+}
+
+.box1 button:hover {
+    box-shadow: 0px 0px 10px #313131;
+    cursor: pointer;
 }
 
 .box1 h3 {
@@ -127,6 +138,10 @@ footer {
 .box3 {
     width: 31%;
     margin: 1%;
+}
+
+.box4 {
+    vertical-align: top;
 }
 
 .contact {
@@ -181,8 +196,12 @@ footer {
         text-align: center;
     }
 
-    .box1, .box2, .box3 {
+    .box1, .box2, .box3, .services-header-img, .item {
         width: 100%;
         margin: 20px 0;
+    }
+
+    .middle-img, .services-header-img {
+        height: 125px;
     }
 }
