Finalized web page and stretch

--- a/css/index.css
+++ b/css/index.css
@@ -75,6 +75,14 @@ nav a:link, nav a:visited, nav a:active {
     text-decoration: none;
 }
 
+ul {
+    padding: 20px;
+}
+
+ul li {
+    list-style-type: square;
+}
+
 footer {
     text-align: center;
     margin: 30px 0;
@@ -82,7 +90,7 @@ footer {
 
 /* Page Width */
 .page {
-    width: 75%;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -90,6 +98,14 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: wrap;
+    flex-wrap: wrap;
+    margin: 2% 0%;
+}
+
+.container2 {
+    display: flex;
+    justify-content: space-between;
     flex-direction: wrap;
     flex-wrap: wrap;
     margin: 2% 0%;
@@ -103,8 +119,7 @@ footer {
 
 .box1, .box2, .item, .box4 {
     width: 48%;
-    margin: 0 auto;
-    vertical-align: top;
+    margin: 1%;
 } 
 
 .box1 {
@@ -118,7 +133,7 @@ footer {
     font-size: 48pt;
 }
 
-.box1 button, .item button {
+.box1 button {
     padding: 10px 25px;
     border: 1px solid #1C1A1A;
     border-radius: 3px;
@@ -140,12 +155,33 @@ footer {
     margin: 1%;
 }
 
-.box4 {
-    vertical-align: top;
-}
-
 .contact {
     padding-top: 20px;
+}
+
+.item {
+    border: 2px solid black;
+    padding: 25px;
+    background-color: white;
+}
+
+.item button {
+    border: 1px solid black;
+    border-radius: 4px;
+    padding: 5px 10px;
+    font-size: 15px;
+}
+
+.item {
+    box-shadow: 0px 0px 10px #8A8A8A;
+}
+
+.services-info-img {
+    width: 100%;
+}
+
+.full-length {
+    margin: 20px 0;
 }
 
 /* Media Breakpoint 800px */
@@ -168,14 +204,13 @@ footer {
         text-align: center;
     }
 
-    
-    
     .page {
         width: 95%;
     }
 
     .box1 {
         padding: 50px 0;
+        width: 100%;
     }
 
     .container .box1:nth-child(2) {
@@ -196,12 +231,18 @@ footer {
         text-align: center;
     }
 
-    .box1, .box2, .box3, .services-header-img, .item {
+    .box1, .box2, .box3, .box4, .item, .services-header-img, .services-info-img, .full-length {
         width: 100%;
+    }
+
+    .box1, .box2, .box3, .box4, .item, .services-header-img, .full-length {
         margin: 20px 0;
     }
 
     .middle-img, .services-header-img {
         height: 125px;
     }
+
+    .container2 .box4:nth-child(1) { order: 2; }
+    .container2 .box4:nth-child(2) { order: 1; }
 }
